--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="container">
                 <div class="app-intro fade-in">
                     <!-- IMPORTANT: Replace 'path/to/your/app_icon.png' with the URL to your app icon image -->
-                    <img src="C:\Users\khayy\Desktop\kayverse-website\assets\images\app_icon.png" alt="Cross Connect App Icon" class="app-icon">
+                    <img src="assets\images\app_icon.png" alt="Cross Connect App Icon" class="app-icon">
                     <div class="app-description">
                         <h2>Cross Connect</h2>
                         <p>
